<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#5e5e5e"
    android:padding="10px">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_1_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_star"
            android:onClick="onRadioBtnClicked"/>

        <RadioButton
            android:id="@+id/radio_2_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_star"
            android:onClick="onRadioBtnClicked"/>

        <RadioButton
            android:id="@+id/radio_3_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_star"
            android:onClick="onRadioBtnClicked"/>

        <RadioButton
            android:id="@+id/radio_4_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_star"
            android:onClick="onRadioBtnClicked"/>

        <RadioButton
            android:id="@+id/radio_5_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_star"
            android:onClick="onRadioBtnClicked"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancelRatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/submitRatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

</LinearLayout>