<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:id="@+id/game_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gameImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gameName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/test"/>

                <TextView
                    android:id="@+id/gameVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test"/>

                <TextView
                    android:id="@+id/gameGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/ratings_amp_reviews"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/gameRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textSize="64sp"
                        android:text="@string/test"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/out_of_5"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/star1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test" />
                    <TextView
                        android:id="@+id/star2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test" />
                    <TextView
                        android:id="@+id/star3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test" />
                    <TextView
                        android:id="@+id/star4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test" />
                    <TextView
                        android:id="@+id/star5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/addRatingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/add_rating"
                android:onClick="addRating"/>

            <Button
                android:id="@+id/addReviewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/write_review"
                android:onClick="addReview" />

        </LinearLayout>

        <ListView
            android:id="@+id/reviewListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>